--- a/project.html
+++ b/project.html
@@ -315,5 +315,8 @@ footer {
             </div>
             </div>
         </section>
+  <footer>
+    <p>&copy; 2025 Website Fajar. All rights reserved.</p>
+  </footer>    
 </body>
 </html>
