--- a/home.html
+++ b/home.html
@@ -289,5 +289,9 @@ footer {
                 <a href="https://www.google.com/" target="_blank" class="cta-button">View Our Services</a>
             </div>
         </section>
+
+  <footer>
+    <p>&copy; 2025 Website Fajar. All rights reserved.</p>
+  </footer>
 </body>
 </html>
