--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header style="background-color: #0779e4;">
     <div class="container">
         <h1 class="logo">
-            <img src="1977fd8b88e70e26b9ffa26c0d994030.png" alt="Logo" class="logoimg"> Website Fajar
-        </h1>
+            <img src="1977fd8b88e70e26b9ffa26c0d994030.png" alt="Logo" class="logoimg"> <a href="index.html" class="name">Website Fajar</a>
+        </h1> 
 
         <nav class="navi">
             <li><a href="home.html">Home</a></li>
