--- a/about.html
+++ b/about.html
@@ -70,6 +70,13 @@ header a {
     font-size: 16px;
 }
 
+.name {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
 header ul {
     list-style: none;
 }
@@ -270,14 +277,14 @@ footer {
     <header style="background-color: #0779e4;">
     <div class="container">
         <h1 class="logo">
-            <img src="1977fd8b88e70e26b9ffa26c0d994030.png" alt="Logo" class="logoimg"> Website Fajar
+            <img src="1977fd8b88e70e26b9ffa26c0d994030.png" alt="Logo" class="logoimg"> <a href="index.html" class="name">Website Fajar</a>
         </h1>
 
         <nav class="navi">
             <li><a href="home.html">Home</a></li>
-            <li><a href="#tentang">About Me</a></li>
-            <li><a href="#teman">My Project</a></li>
-            <li><a href="#kontak">Contact</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="project.html">My Project</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </nav>
     </div>
   </header>
